<resources>
    <string name="app_name">chatbot IA</string>
    <string name="api_key">Bearer aqui el api key openia</string>
    <string name="Old_api_key">Bearer aqui el api key de openia</string>
    <string name="default_web_client_id">googleusercontent</string>
    <string name="facebook_app_id">1162959638176136</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <!-- ingles  -->
    <string name="options">Options</string>
    <string name="new_chat">New chat</string>
    <string name="change_chat_name">Change chat name</string>
    <string name="save_chat">Save chat</string>
    <string name="delete">Delete</string>
        <string name="rename">Rename</string>
        <string name="chat_name">Chat name</string>
        <string name="enter_new_name">Enter new name</string>
        <string name="save">Save</string>
    <string name="back_description">Back</string>
    <string name="more_description">More</string>
    <string name="ask_me">Ask me whatever you want...</string>
    <string name="welcome_text">Welcome to Diana</string>
    <string name="write_something">Write something...</string>
    <string name="send_description">Send</string>
    <string name="mic_description">Mic</string>
        <string name="edit_photo">Edit Photo</string>
        <string name="take_photo">Take a photo</string>
        <string name="upload_photo">Upload photo</string>
    <string name="chats">CHATS</string>
    <string name="search_chat">Search chat</string>
    <string name="saved">SAVED</string>
    <string name="see_all">See all</string>
    <string name="recents">RECENTS</string>
        <string name="welcome">WELCOME, </string>
        <string name="username">USER NAME</string>
        <string name="ask_hint">Ask what you want</string>
        <string name="explore">Explore</string>
        <string name="recent_chats">Recent chats</string>
    <string name="user_name">USER NAME</string>
    <string name="ask_me_whatever">Ask me whatever you want...</string>
    <string name="welcome_to_diana">Welcome to Diana</string>
    <string name="content_description_back">Back</string>
    <string name="content_description_more">More</string>
    <string name="content_description_send">Send</string>
    <string name="content_description_mic">Mic</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Have you forgotten your password?</string>
    <string name="enter">ENTER</string>
    <string name="or_access_through">Or access through</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="listening">Listening...</string>
    <string name="meet_diana">Meet Diana, get closer to the future</string>
    <string name="diana_ready">Diana is always ready to answer your questions</string>
    <string name="write_message">¡Write your message to her and she will give you the answer you are looking for!</string>
    <string name="get_started">Get Started</string>
        <string name="java_code_explanation">Java code explanation</string>
        <string name="math_exercises_resolution">Resolution of mathematical exercises</string>
        <string name="use_your_brain_example">Example of how to use your brain</string>
        <string name="diana_name">Diana</string>
        <string name="diana_description">Hi, I\'m Diana, You can talk with me</string>
        <string name="images_title">Images</string>
        <string name="images_description">Hello, talk to me to get images</string>
        <string name="font_size">Font size</string>
        <string name="theme">Theme</string>
        <string name="notification">Notification</string>
        <string name="privacy">Privacy</string>
        <string name="add_account">Add account</string>
        <string name="logout">Logout</string>
        <string name="select_theme">Select theme</string>
        <string name="system">System</string>
        <string name="light_mode">Light Mode</string>
        <string name="dark_mode">Dark Mode</string>
    <string name="language_change">Change language</string>
    <string name="select_language">select language</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>


</resources>