<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/color_background_chat_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ChatScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/chat_top_bg">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/back_arrow_bg"
                android:contentDescription="@string/back_description"
                android:src="@drawable/round_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="@id/card_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/card_view"
                app:tint="@color/back_icon_color_chat" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="75dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/assistant" />

            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/ib_more"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/back_arrow_bg"
                android:contentDescription="@string/more_description"
                android:src="@drawable/baseline_more_horiz_24"
                app:layout_constraintBottom_toBottomOf="@id/card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/card_view"
                app:tint="@color/back_icon_color_chat" />

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/ask_me"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_layout"
            android:layout_below="@id/cl" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textSize="28dp" />

        <RelativeLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toStartOf="@id/card_view_buttons"
                android:background="@drawable/rounded_shape_message">

                <EditText
                    android:id="@+id/message_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Message"
                    android:background="@drawable/et_bg_message"
                    android:hint="@string/write_something"
                    android:inputType="text"
                    android:padding="15dp" />

                <ImageButton
                    android:id="@+id/microphone_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/outline_mic_24"
                    app:tint="@color/icon_color_chat" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_buttons"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:backgroundTint="@color/card_view_bg_chat"
                android:padding="8dp"
                app:cardCornerRadius="75dp">

                <ImageButton
                    android:id="@+id/send_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/send_description"
                    android:padding="8dp"
                    android:src="@drawable/round_send_24"
                    app:tint="@color/white" />

                <ImageButton
                    android:id="@+id/mic_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/mic_description"
                    android:padding="8dp"
                    android:src="@drawable/round_headphones_24"
                    app:tint="@color/white" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
