<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/color_background_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/home_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_typeChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/tv_welcome"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvProfileImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="75dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_welcome">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/etMessageContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="@id/cvProfileImage"
                app:layout_constraintStart_toStartOf="@id/tv_typeChat"
                app:layout_constraintTop_toBottomOf="@id/tv_typeChat">

                <EditText
                    android:id="@+id/et_ScriptedMessage"
                    android:layout_width="303dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:elegantTextHeight="true"
                    android:gravity="center_vertical"
                    android:hint="@string/ask_hint"
                    tools:textAlignment="textStart" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_buttons"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:backgroundTint="@color/card_view_bg_chat"
                    android:padding="8dp"
                    app:cardCornerRadius="75dp">

                    <ImageButton
                        android:id="@+id/send_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/send_description"
                        android:padding="8dp"
                        android:src="@drawable/round_send_24"
                        app:tint="@color/white" />
                    -->
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl"
            tools:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/tv_explore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_extrabold"
                    android:text="@string/explore"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="@color/text_color"
                    app:layout_constraintBottom_toBottomOf="@id/tv_recent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_recent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_explore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_explore" />

                <TextView
                    android:id="@+id/tv_recent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_extrabold"
                    android:text="@string/recent_chats"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/tv_explore"
                    app:layout_constraintTop_toBottomOf="@id/rv_explore" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recent_chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_recent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
