<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/color_background_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ChatFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_chats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/chats"
            android:textColor="@color/text_color_chat"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/cvProfileImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cvProfileImage" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvProfileImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/cvProfileImage"
            app:layout_constraintStart_toStartOf="@id/tv_chats"
            app:layout_constraintTop_toBottomOf="@id/cvProfileImage">

            <Button
                android:id="@+id/btn_option1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_login_bg"
                android:fontFamily="@font/poppins"
                android:text="@string/new_chat"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                app:icon="@drawable/round_add_24"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/btn_option2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_bg"
                android:fontFamily="@font/poppins"
                android:text="@string/search_chat"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                app:icon="@drawable/round_search_24"
                app:iconTint="@color/white" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <TextView
                    android:id="@+id/tv_all_chats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_extrabold"
                    android:text="@string/saved"
                    android:textColor="@color/text_color_chat"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/see_all"
                    android:textColor="@color/text_color_chat"
                    app:layout_constraintBottom_toBottomOf="@id/tv_all_chats"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_all_chats" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_saved"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_all_chats" />

                <TextView
                    android:id="@+id/tv_recent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_extrabold"
                    android:text="@string/recents"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/tv_all_chats"
                    app:layout_constraintTop_toBottomOf="@id/rv_saved" />

                <TextView
                    android:id="@+id/tv_see_all_recent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/see_all"
                    android:textColor="@color/text_color_chat"
                    app:layout_constraintBottom_toBottomOf="@id/tv_recent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_recent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_recent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
